core : add monaco editor [htm/css]

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </span>
           </div>
           <div class="editor">
-            <textarea id="html"></textarea>
+            <div id="html"></div>
           </div>
         </section>
         <section class="panel">
@@ -64,7 +64,7 @@
             </span>
           </div>
           <div class="editor">
-            <textarea id="css"></textarea>
+            <div id="css"></div>
           </div>
         </section>
         <section class="panel">
